# filter_csv_generic

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
filter_csv_generic/: date_field_ops.py  desc_data_ops.py  dict_field_ops.py  id_field_list_ops.py  id_field_ops.py  main.py  settings.py  string_list_ops.py  string_ops.py
tests/: test_main.py
tests/test_data/: testdata.csv
