[tool.poetry]
name = "filter-csv-generic"
version = "0.1.0"
description = ""
authors = ["Thomas <oeth@aarhus.dk>"]
readme = "README.md"
packages = [{include = "filter_csv_generic"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[tool.poetry.scripts]
backup-search = "filter_csv_generic.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100
